Add TUI E2E test infrastructure and update TODO